# deep-language-networks

./: .gitignore  README.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  e2e.yml  hosted.yml  run.yml  tests.yml
dln/: dataset.py  dataset_info.yaml  loss.py  operator.py  postprocessing.py  score.py  template.py
dln/joint/: model.py
dln/templates/: classify_forward.yaml  classify_residual.yaml  q_action_prompt.yaml  q_action_prompt_seq.yaml  suffix_forward.yaml  suffix_forward_tbs.yaml  suffix_forward_tbs_y.yaml  suffix_forward_y.yaml  thoughts_forward.yaml  thoughts_forward_y.yaml
dln/vi/: joint_model.py  layers.py  model.py  sampler.py  utils.py
flask/: app.py
projects/demo/: Dockerfile  README.md  data.json  demo.py  demo_streamlit.py  requirements.txt
projects/dln_micrograd/: engine.py
projects/guide/: Dockerfile  README.md  app.py  guided_search.py  requirements.txt
projects/nano_dln/: backward.py  dataset.py  layers.py  main.py  ops.py  postprocessing.py  read_results.py  score.py  scorer.py  utils.py
projects/soft_prompts/: Dockerfile  hf_prompt_tuning.py  hf_prompt_tuning_ddp_accelerator.py  phi2_navigate_ddp_accelerator.py  (+9 more)
scripts/: setup_data.sh  split_bigbench_date_understanding.py  split_bigbench_hyperbaton.py  split_bigbench_logical_deduction_seven_objects.py  split_bigbench_navigate.py  utils.py
tests/: conftest.py  test_dln_dataset.py  test_dln_losses.py  test_dln_operator.py  test_dln_postprocessing.py  test_dln_score.py  test_dln_templates.py  test_vi_layers.py  test_vi_model.py  test_vi_sampler.py
(+90 files in other folders)
