[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dln"
version = "0.0.1"
description = "Deep Language Networks"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["dln"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/deep-language-networks"
"Bug Tracker" = "https://github.com/microsoft/deep-language-networks/issues"
